{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 46,
  "lineage": "2a3e4b16-d83a-6a76-37e6-3e01a61c9e31",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "tgw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-east-1:278138852569:transit-gateway/tgw-0962f9e8adc6d7f64",
            "association_default_route_table_id": "tgw-rtb-0606d3745068145ae",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "tgw1",
            "dns_support": "enable",
            "id": "tgw-0962f9e8adc6d7f64",
            "multicast_support": "disable",
            "owner_id": "278138852569",
            "propagation_default_route_table_id": "tgw-rtb-0606d3745068145ae",
            "tags": {
              "AciOwnerTag": "huyen",
              "Name": "tgw1"
            },
            "tags_all": {
              "AciOwnerTag": "huyen",
              "Name": "tgw1"
            },
            "transit_gateway_cidr_blocks": [
              "172.16.11.0/24"
            ],
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_connect",
      "name": "connect1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-attach-0b330a930c4bc2a57",
            "protocol": "gre",
            "tags": {
              "AciOwnerTag": "huyen",
              "Name": "connect1"
            },
            "tags_all": {
              "AciOwnerTag": "huyen",
              "Name": "connect1"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0962f9e8adc6d7f64",
            "transport_attachment_id": "tgw-attach-09aaf8341d1a74ca3"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw1",
            "aws_ec2_transit_gateway_vpc_attachment.vpc1",
            "aws_subnet.net1vpc1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_connect",
      "name": "connect2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-attach-0b1cdef52ec4da1d9",
            "protocol": "gre",
            "tags": {
              "AciOwnerTag": "huyen",
              "Name": "connect2"
            },
            "tags_all": {
              "AciOwnerTag": "huyen",
              "Name": "connect2"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0962f9e8adc6d7f64",
            "transport_attachment_id": "tgw-attach-0ab2e908470185651"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw1",
            "aws_ec2_transit_gateway_vpc_attachment.vpc2",
            "aws_subnet.net1vpc2",
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_connect_peer",
      "name": "peer1connect1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp_asn": "64512",
            "id": "tgw-connect-peer-0e2b029afbc36f2ff",
            "inside_cidr_blocks": [
              "169.254.111.0/29"
            ],
            "peer_address": "10.1.1.1",
            "tags": {
              "AciOwnerTag": "huyen",
              "Name": "peer1connect1"
            },
            "tags_all": {
              "AciOwnerTag": "huyen",
              "Name": "peer1connect1"
            },
            "transit_gateway_address": "172.16.11.176",
            "transit_gateway_attachment_id": "tgw-attach-0b330a930c4bc2a57"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw1",
            "aws_ec2_transit_gateway_connect.connect1",
            "aws_ec2_transit_gateway_vpc_attachment.vpc1",
            "aws_subnet.net1vpc1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_connect_peer",
      "name": "peer1connect2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp_asn": "64512",
            "id": "tgw-connect-peer-07fa9a8585dfeaa22",
            "inside_cidr_blocks": [
              "169.254.121.0/29"
            ],
            "peer_address": "10.1.21.1",
            "tags": {
              "AciOwnerTag": "huyen",
              "Name": "peer1connect2"
            },
            "tags_all": {
              "AciOwnerTag": "huyen",
              "Name": "peer1connect2"
            },
            "transit_gateway_address": "172.16.11.250",
            "transit_gateway_attachment_id": "tgw-attach-0b1cdef52ec4da1d9"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw1",
            "aws_ec2_transit_gateway_connect.connect2",
            "aws_ec2_transit_gateway_vpc_attachment.vpc2",
            "aws_subnet.net1vpc2",
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_connect_peer",
      "name": "peer2connect1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp_asn": "64512",
            "id": "tgw-connect-peer-0dc3c9fd1226a81e2",
            "inside_cidr_blocks": [
              "169.254.112.0/29"
            ],
            "peer_address": "10.1.2.1",
            "tags": {
              "AciOwnerTag": "huyen",
              "Name": "peer2connect1"
            },
            "tags_all": {
              "AciOwnerTag": "huyen",
              "Name": "peer2connect1"
            },
            "transit_gateway_address": "172.16.11.173",
            "transit_gateway_attachment_id": "tgw-attach-0b330a930c4bc2a57"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw1",
            "aws_ec2_transit_gateway_connect.connect1",
            "aws_ec2_transit_gateway_vpc_attachment.vpc1",
            "aws_subnet.net1vpc1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_connect_peer",
      "name": "peer2connect2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp_asn": "64512",
            "id": "tgw-connect-peer-023874a4fa54b9231",
            "inside_cidr_blocks": [
              "169.254.122.0/29"
            ],
            "peer_address": "10.1.22.1",
            "tags": {
              "AciOwnerTag": "huyen",
              "Name": "peer2connect2"
            },
            "tags_all": {
              "AciOwnerTag": "huyen",
              "Name": "peer2connect2"
            },
            "transit_gateway_address": "172.16.11.196",
            "transit_gateway_attachment_id": "tgw-attach-0b1cdef52ec4da1d9"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw1",
            "aws_ec2_transit_gateway_connect.connect2",
            "aws_ec2_transit_gateway_vpc_attachment.vpc2",
            "aws_subnet.net1vpc2",
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-09aaf8341d1a74ca3",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-03ac0e63ec8b3f94e"
            ],
            "tags": {
              "AciOwnerTag": "huyen",
              "Name": "vpc1"
            },
            "tags_all": {
              "AciOwnerTag": "huyen",
              "Name": "vpc1"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0962f9e8adc6d7f64",
            "vpc_id": "vpc-0b994517be35bab93",
            "vpc_owner_id": "278138852569"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw1",
            "aws_subnet.net1vpc1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0ab2e908470185651",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-07197f0d8d8715400"
            ],
            "tags": {
              "AciOwnerTag": "huyen",
              "Name": "vpc2"
            },
            "tags_all": {
              "AciOwnerTag": "huyen",
              "Name": "vpc2"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0962f9e8adc6d7f64",
            "vpc_id": "vpc-07866415e03aaf5c7",
            "vpc_owner_id": "278138852569"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw1",
            "aws_subnet.net1vpc2",
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:278138852569:instance/i-0669d37f85a097518",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0669d37f85a097518",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "htduong-us-east-1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07117920e3204c790",
            "private_dns": "ip-10-1-1-120.ec2.internal",
            "private_ip": "10.1.1.120",
            "public_ip": "54.90.171.223",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04ecb09f12092e34b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03ac0e63ec8b3f94e",
            "tags": {
              "AciOwnerTag": "huyen",
              "Name": "web1"
            },
            "tags_all": {
              "AciOwnerTag": "huyen",
              "Name": "web1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08b5aca16b6a787bf"
            ]
          },
          "dependencies": [
            "aws_security_group.vpc1sg",
            "aws_subnet.net1vpc1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:278138852569:instance/i-001388a27a2a0b3fd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-001388a27a2a0b3fd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "htduong-us-east-1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a6004d0e5cd43682",
            "private_dns": "ip-10-2-1-157.ec2.internal",
            "private_ip": "10.2.1.157",
            "public_ip": "35.153.19.226",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ff7df85da423ff36",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07197f0d8d8715400",
            "tags": {
              "AciOwnerTag": "huyen",
              "Name": "web2"
            },
            "tags_all": {
              "AciOwnerTag": "huyen",
              "Name": "web2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a415e7c6fe235e4c"
            ]
          },
          "dependencies": [
            "aws_security_group.vpc2sg",
            "aws_subnet.net1vpc2",
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:278138852569:internet-gateway/igw-0bee69d869130670a",
            "id": "igw-0bee69d869130670a",
            "owner_id": "278138852569",
            "tags": {
              "AciOwnerTag": "huyen",
              "Name": "igw1"
            },
            "tags_all": {
              "AciOwnerTag": "huyen",
              "Name": "igw1"
            },
            "vpc_id": "vpc-0b994517be35bab93"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:278138852569:internet-gateway/igw-00bb247535ffc2409",
            "id": "igw-00bb247535ffc2409",
            "owner_id": "278138852569",
            "tags": {
              "AciOwnerTag": "huyen",
              "Name": "igw2"
            },
            "tags_all": {
              "AciOwnerTag": "huyen",
              "Name": "igw2"
            },
            "vpc_id": "vpc-07866415e03aaf5c7"
          },
          "dependencies": [
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "net1vpc1rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:278138852569:route-table/rtb-0c2ff89b10e48953e",
            "id": "rtb-0c2ff89b10e48953e",
            "owner_id": "278138852569",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bee69d869130670a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "AciOwnerTag": "huyen",
              "Name": "net1vpc1rt"
            },
            "tags_all": {
              "AciOwnerTag": "huyen",
              "Name": "net1vpc1rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b994517be35bab93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "net1vpc2rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:278138852569:route-table/rtb-0cc7b7aa11006de9c",
            "id": "rtb-0cc7b7aa11006de9c",
            "owner_id": "278138852569",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00bb247535ffc2409",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "AciOwnerTag": "huyen",
              "Name": "net1vpc2rt"
            },
            "tags_all": {
              "AciOwnerTag": "huyen",
              "Name": "net1vpc2rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07866415e03aaf5c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw2",
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc1net1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0452666fa8a3950ba",
            "route_table_id": "rtb-0c2ff89b10e48953e",
            "subnet_id": "subnet-03ac0e63ec8b3f94e"
          },
          "dependencies": [
            "aws_internet_gateway.igw1",
            "aws_route_table.net1vpc1rt",
            "aws_subnet.net1vpc1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc2net1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081615278422e309a",
            "route_table_id": "rtb-0cc7b7aa11006de9c",
            "subnet_id": "subnet-07197f0d8d8715400"
          },
          "dependencies": [
            "aws_internet_gateway.igw2",
            "aws_route_table.net1vpc2rt",
            "aws_subnet.net1vpc2",
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mix12sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:278138852569:security-group/sg-0845003d4205ece27",
            "description": "mix12 security group",
            "egress": [],
            "id": "sg-0845003d4205ece27",
            "ingress": [],
            "name": "mix12sg",
            "name_prefix": "",
            "owner_id": "278138852569",
            "revoke_rules_on_delete": false,
            "tags": {
              "AciOwnerTag": "huyen",
              "Name": "mix12sg"
            },
            "tags_all": {
              "AciOwnerTag": "huyen",
              "Name": "mix12sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b994517be35bab93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mix21sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:278138852569:security-group/sg-0573088a96037cfaf",
            "description": "mix21 security group",
            "egress": [],
            "id": "sg-0573088a96037cfaf",
            "ingress": [],
            "name": "mix21sg",
            "name_prefix": "",
            "owner_id": "278138852569",
            "revoke_rules_on_delete": false,
            "tags": {
              "AciOwnerTag": "huyen",
              "Name": "mix21sg"
            },
            "tags_all": {
              "AciOwnerTag": "huyen",
              "Name": "mix21sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07866415e03aaf5c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc1sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:278138852569:security-group/sg-08b5aca16b6a787bf",
            "description": "vpc1 security group",
            "egress": [],
            "id": "sg-08b5aca16b6a787bf",
            "ingress": [],
            "name": "vpc1sg",
            "name_prefix": "",
            "owner_id": "278138852569",
            "revoke_rules_on_delete": false,
            "tags": {
              "AciOwnerTag": "huyen",
              "Name": "vpc1sg"
            },
            "tags_all": {
              "AciOwnerTag": "huyen",
              "Name": "vpc1sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b994517be35bab93"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc2sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:278138852569:security-group/sg-0a415e7c6fe235e4c",
            "description": "vpc2 security group",
            "egress": [],
            "id": "sg-0a415e7c6fe235e4c",
            "ingress": [],
            "name": "vpc2sg",
            "name_prefix": "",
            "owner_id": "278138852569",
            "revoke_rules_on_delete": false,
            "tags": {
              "AciOwnerTag": "huyen",
              "Name": "vpc2sg"
            },
            "tags_all": {
              "AciOwnerTag": "huyen",
              "Name": "vpc2sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07866415e03aaf5c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mix12all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-3759270756",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0845003d4205ece27",
            "self": false,
            "source_security_group_id": "sg-08b5aca16b6a787bf",
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.mix12sg",
            "aws_security_group.vpc1sg",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mix12allowhttp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-3982338214",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0845003d4205ece27",
            "self": false,
            "source_security_group_id": "sg-08b5aca16b6a787bf",
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.mix12sg",
            "aws_security_group.vpc1sg",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mix12allowssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-2019767982",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0845003d4205ece27",
            "self": false,
            "source_security_group_id": "sg-08b5aca16b6a787bf",
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.mix12sg",
            "aws_security_group.vpc1sg",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mix21all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-2171931675",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0573088a96037cfaf",
            "self": false,
            "source_security_group_id": "sg-0a415e7c6fe235e4c",
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.mix21sg",
            "aws_security_group.vpc2sg",
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mix21allowhttp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-3664451522",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0573088a96037cfaf",
            "self": false,
            "source_security_group_id": "sg-0a415e7c6fe235e4c",
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.mix21sg",
            "aws_security_group.vpc2sg",
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mix21allowssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-1331005898",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0573088a96037cfaf",
            "self": false,
            "source_security_group_id": "sg-0a415e7c6fe235e4c",
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.mix21sg",
            "aws_security_group.vpc2sg",
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vpc1all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2461625733",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-08b5aca16b6a787bf",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc1sg",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vpc1allowhttp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2625295469",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08b5aca16b6a787bf",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc1sg",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vpc1allowicmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": -1,
            "id": "sgrule-1082262156",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-08b5aca16b6a787bf",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc1sg",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vpc1allowssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-1305074406",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08b5aca16b6a787bf",
            "self": false,
            "source_security_group_id": "sg-08b5aca16b6a787bf",
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc1sg",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vpc2all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-808456699",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a415e7c6fe235e4c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc2sg",
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vpc2allowhttp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1026581622",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a415e7c6fe235e4c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc2sg",
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vpc2allowicmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": -1,
            "id": "sgrule-151210506",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-0a415e7c6fe235e4c",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc2sg",
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vpc2allowssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-3196725509",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a415e7c6fe235e4c",
            "self": false,
            "source_security_group_id": "sg-0a415e7c6fe235e4c",
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc2sg",
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "net1vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:278138852569:subnet/subnet-03ac0e63ec8b3f94e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ac0e63ec8b3f94e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "278138852569",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AciOwnerTag": "huyen",
              "Name": "net1vpc1"
            },
            "tags_all": {
              "AciOwnerTag": "huyen",
              "Name": "net1vpc1"
            },
            "vpc_id": "vpc-0b994517be35bab93"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "net1vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:278138852569:subnet/subnet-07197f0d8d8715400",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07197f0d8d8715400",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "278138852569",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AciOwnerTag": "huyen",
              "Name": "net1vpc2"
            },
            "tags_all": {
              "AciOwnerTag": "huyen",
              "Name": "net1vpc2"
            },
            "vpc_id": "vpc-07866415e03aaf5c7"
          },
          "dependencies": [
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "net2vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:278138852569:subnet/subnet-0ce06352afb046ee1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce06352afb046ee1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "278138852569",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AciOwnerTag": "huyen",
              "Name": "net2vpc1"
            },
            "tags_all": {
              "AciOwnerTag": "huyen",
              "Name": "net2vpc1"
            },
            "vpc_id": "vpc-0b994517be35bab93"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "net2vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:278138852569:subnet/subnet-09169e76e05e8d0dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.2.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09169e76e05e8d0dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "278138852569",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AciOwnerTag": "huyen",
              "Name": "net2vpc2"
            },
            "tags_all": {
              "AciOwnerTag": "huyen",
              "Name": "net2vpc2"
            },
            "vpc_id": "vpc-07866415e03aaf5c7"
          },
          "dependencies": [
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "net3vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:278138852569:subnet/subnet-0e5144316d655d117",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5144316d655d117",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "278138852569",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AciOwnerTag": "huyen",
              "Name": "net3vpc1"
            },
            "tags_all": {
              "AciOwnerTag": "huyen",
              "Name": "net3vpc1"
            },
            "vpc_id": "vpc-0b994517be35bab93"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "net3vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:278138852569:subnet/subnet-0ff901a6fc99fc83c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.2.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff901a6fc99fc83c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "278138852569",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AciOwnerTag": "huyen",
              "Name": "net3vpc2"
            },
            "tags_all": {
              "AciOwnerTag": "huyen",
              "Name": "net3vpc2"
            },
            "vpc_id": "vpc-07866415e03aaf5c7"
          },
          "dependencies": [
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "net4vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:278138852569:subnet/subnet-0472f05c22c363f2f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0472f05c22c363f2f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "278138852569",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AciOwnerTag": "huyen",
              "Name": "net4vpc1"
            },
            "tags_all": {
              "AciOwnerTag": "huyen",
              "Name": "net4vpc1"
            },
            "vpc_id": "vpc-0b994517be35bab93"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "net4vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:278138852569:subnet/subnet-0159d299e0733248e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.2.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0159d299e0733248e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "278138852569",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AciOwnerTag": "huyen",
              "Name": "net4vpc2"
            },
            "tags_all": {
              "AciOwnerTag": "huyen",
              "Name": "net4vpc2"
            },
            "vpc_id": "vpc-07866415e03aaf5c7"
          },
          "dependencies": [
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:278138852569:vpc/vpc-0b994517be35bab93",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-02ae3f2ca78f63996",
            "default_route_table_id": "rtb-0c60aa7e6a8e26a41",
            "default_security_group_id": "sg-0f1c265266407d35f",
            "dhcp_options_id": "dopt-ead08291",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b994517be35bab93",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c60aa7e6a8e26a41",
            "owner_id": "278138852569",
            "tags": {
              "AciOwnerTag": "huyen",
              "Name": "vpc1"
            },
            "tags_all": {
              "AciOwnerTag": "huyen",
              "Name": "vpc1"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:278138852569:vpc/vpc-07866415e03aaf5c7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0957aee4550980e61",
            "default_route_table_id": "rtb-0cbb6d9fb0172738a",
            "default_security_group_id": "sg-06517beb16b4ac79b",
            "dhcp_options_id": "dopt-ead08291",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07866415e03aaf5c7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cbb6d9fb0172738a",
            "owner_id": "278138852569",
            "tags": {
              "AciOwnerTag": "huyen",
              "Name": "vpc2"
            },
            "tags_all": {
              "AciOwnerTag": "huyen",
              "Name": "vpc2"
            }
          }
        }
      ]
    }
  ]
}